# sizing_calculator

./: .flake8  .gitignore  .isort.cfg  Dockerfile  LICENSE  README.md  common.py  conda_env_empty.yaml  const.py  constants.py  grafana_analysis.py  llm.py  logging.py  main.py  manage.py  pyproject.toml  pytest.ini  settings.py
kube/: cron_job.yaml
metrics/: __init__.py  collector.py
metrics/model/: tables.py
metrics/prom_ql/: queries.py
prometheus/: README.md  __init__.py  collector.py  commands.py  common.py  const.py  dashboards_analysis.py  models.py  portal.py  prom_ql.py  prom_rds.py  prompt_model.py  prompts.py  queries.py  rules.py  sizing_calculator.py  sla_model.py
prometheus/kubernetes/expressions/basic/: jvm_basic.json  persistent_volumes_claim.json  pod_network_stats.json
prometheus/test_summary/: M_load_dedicated_aurora.json  S_load_dedicated_aurora.json  S_load_shared_aurora.json
pycpt_snowflake/: dataframe.py  engine.py  queries.py
reports/: __init__.py  html.py
req_resp_log/: __init__.py
shared/: __init__.py  utils.py
sizing/: __init__.py  calculator.py  data.py  rules.py
sla_tables/: pod_basic_resources.json
sla_tables/kube/: jvm_basic.json  persistent_volumes_claim.json  pod_basic_resources.json
sla_tables/network/: pod_network_stats.json
sla_tables/node/: cpu_basic.json
snowflake/: columns.py  const.py  dataframe.py  engine.py  queries.py
storage/: abc_engine.py
storage/postgres/: engine.py
storage/snowflake/: __init__.py  columns.py  dataframe.py  engine.py  engine_abc.py  queries.py
test_summary/: M_load_dedicated_aurora.json  S_load_dedicated_aurora.json  S_load_dedicated_aurora_new.json  S_load_dedicated_aurora_recalculated.json  S_load_shared_aurora.json  model.py
tests/: todo.md
tests/calculator/: test_limits_requests.py  test_sizing_report.py
tests/data/: POD_BASIC_RESOURCES.json
tests/data/dashboards/: argo_cd.json  cert_manager.json  ingress_nginx.json  k8s_api_server.json  k8s_coredns.json  k8s_global.json  k8s_namespace.json  k8s_node.json  k8s_persistent_volumes.json  k8s_pod.json  linkerd_authority.json  linkerd_deployment.json  linkerd_health.json  linkerd_job.json  linkerd_namespace.json  linkerd_pod.json  linkerd_service.json  linkerd_statefulset.json  linkerd_topline.json  logging_operator.json
tests/settings/: test_sigleton.py
