[tool.poetry]
name = "sizing_calculator"
version = "0.1.0"
description = "calculator for sizing of a k8s deploymnet."
authors = ["Bahnik, Tomas <tomas.bahnik@email.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
snowflake-connector-python = {extras = ["pandas"], version = "^3.6.0"}
snowflake-sqlalchemy = "^1.5.1"
typer = "^0.9.0"
pytest = "^7.4.4"
prometheus-pandas = "^0.3.3"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"

# snowflake-connector-python 3.6.0 insatlled pandas 1.5.3 explicitely selected last version <2.2.0
pandas = "2.1.3"

# AI (pandasai part needs to be rewrited)
# pandasai (>=1.5.17,<2.0.0) requires pydantic (>=1,<2) - separate env need
langchain = "^0.1.3"
openai = "^1.10.0"
langchain-openai = "^0.0.4"
