[tool.poetry]
name = "sizing_calculator"
version = "0.1.0"
description = "calculator for sizing of a k8s deploymnet."
authors = ["Bahnik, Tomas <tomas.bahnik@email.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
snowflake-connector-python = { extras = ["pandas"], version = "^3.6.0" }
snowflake-sqlalchemy = "^1.5.1"
typer = "^0.9.0"
pytest = "^7.4.4"
prometheus-pandas = "^0.3.3"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
loguru = "^0.7.2"

# snowflake-connector-python 3.6.0 insatlled pandas 1.5.3 explicitely selected last version <2.2.0
pandas = "2.1.3"

# AI (pandasai part needs to be rewrited)
# pandasai (>=1.5.17,<2.0.0) requires pydantic (>=1,<2) - separate env need
langchain = "^0.1.3"
openai = "^1.10.0"
langchain-openai = "^0.0.4"

[tool.poetry.group.dev.dependencies]
# Linting + formatting
# code formatter
black = "^24.1.1"
flake8 = "^7.0.0"
# better list/set/dict comprehensions.
flake8-comprehensions = "^3.14.0"
# Linter that checks docstrings of functions, methods and classes.
flake8-docstrings = "^1.7.0"
# flake8 plugin that checks for commented out code.
flake8-eradicate = "^1.5.0"
flake8-fixme = "^1.1.1"
# heck if the imports on your python files are sorted
flake8-isort = "^6.1.1"
flake8-use-fstring = "^1.4"
flake8-unused-arguments = "^0.0.13"
isort = "^5.13.2"
