[tool.black]
line-length = 120
target-version = ['py311']
include = '\.py$'
extend-exclude = '_pb2\.py$'

[tool.mypy]
files = "./"
ignore_missing_imports = true

[tool.poetry]
name = "sizing_calculator"
version = "0.1.0"
description = "calculator for sizing of a k8s deploymnet."
authors = ["Bahnik, Tomas <tomas.bahnik@email.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
# storage for prometheus data
snowflake-connector-python = { extras = ["pandas"], version = "^3.6.0" }
snowflake-sqlalchemy = "^1.5.1"
prometheus-pandas = "^0.3.3"
# snowflake-connector-python 3.6.0 insatlled pandas 1.5.3 explicitely selected last version <2.2.0
pandas = "2.1.3"
# storage for prometheus data - need pg_config and gcc
# sudo apt-get install libpq-dev
# sudo apt install build-essential
psycopg2 = "^2.9.9"

# Infrastructure
typer = "^0.9.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
loguru = "^0.7.2"

# AI (pandasai part needs to be rewrote)
# pandasai (>=1.5.17,<2.0.0) requires pydantic (>=1,<2) - separate env need
langchain = "^0.1.3"
openai = "^1.10.0"
langchain-openai = "^0.0.4"

# Static type checking
mypy = "^1.8.0"

# Testing
pytest = "^7.4.4"
# pytest-cov is a plugin for pytest that generates coverage reports.
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
# Linting + formatting
# code formatter
black = "^24.1.1"
flake8 = "^7.0.0"
# better list/set/dict comprehensions.
flake8-comprehensions = "^3.14.0"
# Linter that checks docstrings of functions, methods and classes.
flake8-docstrings = "^1.7.0"
# flake8 plugin that checks for commented out code.
flake8-eradicate = "^1.5.0"
flake8-fixme = "^1.1.1"
# heck if the imports on your python files are sorted
flake8-isort = "^6.1.1"
flake8-use-fstring = "^1.4"
flake8-unused-arguments = "^0.0.13"
isort = "^5.13.2"
